--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <main>
+    <!-- baneris -->
+    <div>
+      <a href="#">Pawz</a>
+      <a href="#">Home</a>
+      <a href="#">Products</a>
+      <a href="#">About Us</a>
+      <a href="#">Contact Us</a>
+    </div>
+    <!-- puslapis -->
+    <div>
+      <div>404</div>
+      <div>Oops!</div>
+      <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      </div>
+      <div>
+        <a href="#">Home</a>
+        <a href="#">Back</a>
+      </div>
+      <img src="#" alt="katinelis">
+    </div>
+  </main>
 </body>
 </html>
