--- a/index.html
+++ b/index.html
@@ -7,27 +7,34 @@
   <title>Document</title>
 </head>
 <body>
-  <main>
+  <main style="display:inline-block; background-color: blueviolet; vertical-align: middle;" >
+  
     <!-- baneris -->
-    <div>
-      <a href="#">Pawz</a>
-      <a href="#">Home</a>
-      <a href="#">Products</a>
-      <a href="#">About Us</a>
-      <a href="#">Contact Us</a>
-    </div>
+    <header style="background-color: rgb(233, 59, 183); width: 100%; display: inline-block; height: 70px; vertical-align: middle;">
+      <div style="background-color: rgb(158, 101, 101); display: inline-block; margin-left: 80px;  vertical-align: middle;">
+        <a href="#">Pawz</a>
+      </div>
+      <div style="background-color:pink; display: inline-block;  height: 70px; vertical-align: middle;">
+            <a href="#" style="margin-right: 40px; ">Home</a>
+            <a href="#" style="margin-right: 40px;">Products</a>
+            <a href="#" style="margin-right: 40px;">About Us</a>
+            <a href="#">Contact Us</a>
+      </div>
+    </header>
     <!-- puslapis -->
-    <div>
-      <div>404</div>
-      <div>Oops!</div>
-      <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    <div style="background-color: rgb(105, 164, 105); display: inline-block; width: 80%; vertical-align: middle; margin-left: 166px; margin-top: 60px;">
+      <div style="background-color: red; display: inline-block; vertical-align: middle; margin-left: 80px; margin-right: 320px;">
+        <div>404</div>
+        <div>Oops!</div>
+        <div>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </div>
+        <div style="background-color:aqua;">
+            <input type="button" value="Home">
+            <input type="button" value="Back">
+        </div>
       </div>
-      <div>
-        <a href="#">Home</a>
-        <a href="#">Back</a>
-      </div>
-      <img src="#" alt="katinelis">
+        <img src="./cat.png" alt="katinelis" style=" display: inline-block; vertical-align: middle;">
     </div>
   </main>
 </body>
