--- a/index.html
+++ b/index.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="myStyle.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
-  <main style="display:inline-block; background-color: blueviolet; vertical-align: middle;" >
-  
+  <main>
     <!-- baneris -->
-    <header style="background-color: rgb(233, 59, 183); width: 100%; display: inline-block; height: 70px; vertical-align: middle;">
-      <div style="background-color: rgb(158, 101, 101); display: inline-block; margin-left: 80px;  vertical-align: middle;">
+    <header>
+      <div class="pawz">
         <a href="#">Pawz</a>
       </div>
-      <div style="background-color:pink; display: inline-block;  height: 70px; vertical-align: middle;">
-            <a href="#" style="margin-right: 40px; ">Home</a>
-            <a href="#" style="margin-right: 40px;">Products</a>
-            <a href="#" style="margin-right: 40px;">About Us</a>
+      <div class="meniu">
+            <a href="#">Home</a>
+            <a href="#">Products</a>
+            <a href="#">About Us</a>
             <a href="#">Contact Us</a>
       </div>
     </header>
     <!-- puslapis -->
-    <div style="background-color: rgb(105, 164, 105); display: inline-block; width: 80%; vertical-align: middle; margin-left: 166px; margin-top: 60px;">
-      <div style="background-color: red; display: inline-block; vertical-align: middle; margin-left: 80px; margin-right: 320px;">
-        <div>404</div>
-        <div>Oops!</div>
+    <div class="puslapis" >
+      <div class="kaire">
+        <div>
+          <h1>404</h1>
+        </div>
+        <div>
+          <h1>Oops!</h1>
+        </div>
         <div>
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </div>
-        <div style="background-color:aqua;">
+        <div>
             <input type="button" value="Home">
             <input type="button" value="Back">
         </div>
       </div>
-        <img src="./cat.png" alt="katinelis" style=" display: inline-block; vertical-align: middle;">
+        <img src="./cat.png" alt="katinelis" class="cat-foto">
     </div>
   </main>
 </body>
