--- a/index.html
+++ b/index.html
@@ -9,37 +9,28 @@
 </head>
 <body>
   <main>
-    <!-- baneris -->
     <header>
-      <div class="pawz">
-        <a href="#">Pawz</a>
-      </div>
-      <div class="meniu">
-            <a href="#">Home</a>
-            <a href="#">Products</a>
-            <a href="#">About Us</a>
-            <a href="#">Contact Us</a>
-      </div>
+      <img src="logo.png" alt="Logo">
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Products</a>
+        <a href="#">About Us</a>
+        <a href="#">Contact Us</a>
+      </nav>
     </header>
-    <!-- puslapis -->
-    <div class="puslapis" >
-      <div class="kaire">
-        <div>
-          <h1>404</h1>
-        </div>
-        <div>
-          <h1>Oops!</h1>
-        </div>
-        <div>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </div>
-        <div>
-            <input type="button" value="Home">
-            <input type="button" value="Back">
-        </div>
+    <section>
+      <div>
+        <h1>404</h1>
+        <h1>Oops!</h1>
+        <h1>-</h1>
+        <p>ok this is awkward but dont think should be here</p>
+        <input type="button" value="home">
+        <input type="button" value="back">
       </div>
-        <img src="./cat.png" alt="katinelis" class="cat-foto">
-    </div>
+      <img src="katinel.png" alt="katinel" >
+    </section>
   </main>
+
+ 
 </body>
 </html>
