--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
     </header>
     <section>
       <div>
-        <h1>404</h1>
-        <h1>Oops!</h1>
-        <h1>-</h1>
-        <p>ok this is awkward but dont think should be here</p>
+        <h1>404<br>Oops!</h1>
+        <p>ok this is awkward but dont think should be here</p><br>
         <input type="button" value="home">
         <input type="button" value="back">
       </div>
