--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <input type="button" value="home">
         <input type="button" value="back">
       </div>
-      <img src="katinel.png" alt="katinel" >
+      <img src="kkkk.png" alt="katinel" >
     </section>
   </main>
 
