--- a/index.html
+++ b/index.html
@@ -10,25 +10,11 @@
 <body>
   <main>
     <header>
-      <img src="logo.png" alt="Logo">
-      <nav>
-        <a href="#">Home</a>
-        <a href="#">Products</a>
-        <a href="#">About Us</a>
-        <a href="#">Contact Us</a>
-      </nav>
+      headwer
     </header>
-    <section>
-      <div>
-        <h1>404<br>Oops!</h1>
-        <p>ok this is awkward but dont think should be here</p><br>
-        <input type="button" value="home">
-        <input type="button" value="back">
-      </div>
-      <img src="kkkk.png" alt="katinel" >
-    </section>
-  </main>
-
+    <main>
+      
+    </main>
  
 </body>
 </html>
